Update library information

--- a/txtbranch/Base.lproj/Main.storyboard
+++ b/txtbranch/Base.lproj/Main.storyboard
@@ -125,15 +125,15 @@
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="ASIHTTPRequest" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TQM-3K-O3d">
-                                                    <rect key="frame" x="15" y="3" width="141" height="22"/>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="AFNetworking" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TQM-3K-O3d">
+                                                    <rect key="frame" x="15" y="3" width="114" height="22"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="http://allseeing-i.com/ASIHTTPRequest/" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="DHK-Pw-NcU">
-                                                    <rect key="frame" x="15" y="25" width="224" height="15"/>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="https://github.com/AFNetworking/AFNetworking" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="DHK-Pw-NcU">
+                                                    <rect key="frame" x="15" y="25" width="269" height="15"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -283,7 +283,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SectionCell" textLabel="lMW-CM-Rdw" detailTextLabel="FZD-g8-P9e" style="IBUITableViewCellStyleValue1" id="kQT-uB-8dL">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kQT-uB-8dL" id="jko-G6-N2R">
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -334,7 +334,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BranchFormTableViewCell" rowHeight="97" id="bbC-ae-UG0" customClass="BranchFormTableViewCell">
-                                <rect key="frame" x="0.0" y="86" width="320" height="97"/>
+                                <rect key="frame" x="0.0" y="22" width="320" height="97"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bbC-ae-UG0" id="mbq-Lm-hBC">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
@@ -429,7 +429,7 @@
                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AboutTableViewCell" rowHeight="60" id="Tn3-TU-2Rb" customClass="AboutTableViewCell">
-                                        <rect key="frame" x="0.0" y="86" width="320" height="60"/>
+                                        <rect key="frame" x="0.0" y="22" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Tn3-TU-2Rb" id="wHk-SY-zIn">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
@@ -479,7 +479,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LoadParentTableViewCell" textLabel="0JA-Z4-4ec" rowHeight="27" style="IBUITableViewCellStyleDefault" id="IKM-QF-rMK">
-                                        <rect key="frame" x="0.0" y="146" width="320" height="27"/>
+                                        <rect key="frame" x="0.0" y="82" width="320" height="27"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IKM-QF-rMK" id="R48-i0-fdo">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="27"/>
@@ -497,7 +497,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="detailButton" indentationWidth="10" reuseIdentifier="LinkTableViewCell" rowHeight="26" id="Rbv-N4-9sa" customClass="LinkTableViewCell">
-                                        <rect key="frame" x="0.0" y="173" width="320" height="26"/>
+                                        <rect key="frame" x="0.0" y="109" width="320" height="26"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Rbv-N4-9sa" id="crh-to-8a4">
                                             <rect key="frame" x="0.0" y="0.0" width="273" height="26"/>
@@ -517,7 +517,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContentTableViewCell" rowHeight="43" id="BLX-2m-SQi" customClass="ContentTableViewCell">
-                                        <rect key="frame" x="0.0" y="199" width="320" height="43"/>
+                                        <rect key="frame" x="0.0" y="135" width="320" height="43"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BLX-2m-SQi" id="cJt-P7-isX">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -537,7 +537,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="CurrentBranchTextCell" textLabel="rB4-cz-UbA" rowHeight="21" style="IBUITableViewCellStyleDefault" id="PSK-A4-baU">
-                                        <rect key="frame" x="0.0" y="242" width="320" height="21"/>
+                                        <rect key="frame" x="0.0" y="178" width="320" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PSK-A4-baU" id="NDA-pu-tKl">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="21"/>
@@ -554,7 +554,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="OrTableViewCell" rowHeight="22" id="M0c-Cj-W5H">
-                                        <rect key="frame" x="0.0" y="263" width="320" height="22"/>
+                                        <rect key="frame" x="0.0" y="199" width="320" height="22"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="M0c-Cj-W5H" id="qow-dj-CyF">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="22"/>
@@ -572,7 +572,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AddBranchTableViewCell" textLabel="IJo-tF-9vd" rowHeight="27" style="IBUITableViewCellStyleDefault" id="8AP-hs-LsZ">
-                                        <rect key="frame" x="0.0" y="285" width="320" height="27"/>
+                                        <rect key="frame" x="0.0" y="221" width="320" height="27"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8AP-hs-LsZ" id="FHb-8v-KhX">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="27"/>
@@ -666,11 +666,11 @@
             <objects>
                 <viewController id="K22-Wt-JZ8" customClass="SignInViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tF6-Ni-fYz">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" id="bWP-FG-EA9">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
